--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-url: http://dingyanna.github.io
+title: Yanna Ding
+show_downloads: true
 theme: jekyll-theme-minimal
 markdown: kramdown
+url: 'http://dingyanna.github.io'
