--- a/_config.yml
+++ b/_config.yml
@@ -2,4 +2,4 @@ title: Yanna Ding
 show_downloads: true
 theme: jekyll-theme-minimal
 markdown: kramdown
-url: 'http://dingyanna.github.io'
+github: [metadata]
