--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 # theme                  : "minimal-mistakes-jekyll"
-# remote_theme           : "mmistakes/minimal-mistakes"
+remote_theme           : "mmistakes/minimal-mistakes"
 minimal_mistakes_skin    : "dirt" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
-theme: minimal-mistakes-jekyll
+# theme: minimal-mistakes-jekyll
 # Site Settings
 locale                   : "en-US"
 title                    : "Yanna Ding's Homepage"
@@ -90,6 +90,8 @@ analytics:
     tracking_id          :
     anonymize_ip         : # true, false (default)
 
+    
+github: [metadata]
 
 # Site Author
 author:
